# mosmo

./: LICENSE.txt  README.md  fba_gd.py  pyproject.toml  reaction_network.py  scheme.py  setup.py
experiment/: glycolysis.py  glycolysis_tca.py
files/pw/: anaplerosis.json  central_carbon.json  glycolysis_ppp_ed.json
kb/: codecs.py  kb.py
knowledge/: kb.py  thermo.py
model/: core.py  reaction_network.py
mosmo/calc/: convenience_kinetics.py  fba_gd.py  ph_dynamics.py
mosmo/knowledge/: __init__.py  codecs.py  datasources.py  kb.py  session.py  thermo.py
mosmo/model/: __init__.py  base.py  core.py  datasources.py  pathway.py  reaction_network.py
mosmo/preso/escher/: escher_map.py  escher_model.py
mosmo/preso/escher/pw/: central_carbon.json  central_carbon_oxphos.json  electron_transport.json  glycolysis_ppp.json  glycolysis_ppp_ed.json  glycolysis_ppp_ov.json  glycolysis_ppp_ov_simplified.json
mosmo/sim/: convenience_kinetics.py  fba_gd.py  ph_dynamics.py
notebooks/: All the Sugarz.ipynb  Buffered pH Dynamics - dev.ipynb  Buffered pH Dynamics.ipynb  Build Up ATP synthase.ipynb  Build Up Central Carbon Metabolism.ipynb  Build Up ETC.ipynb  Central Carbon 2.ipynb  Central Carbon Studies.ipynb  ConvenienceKinetics Fitting.ipynb  ConvenienceKinetics jax (dev).ipynb  Electron Transport Chain in KB.ipynb  Elementary Modes (Schuster et al).ipynb  FBA-GD vs LP 2.ipynb  FBA-GD vs LP.ipynb  FBAgd paper Results.ipynb  FBAgd paper working notebook.ipynb  FBAgd robustness.ipynb  Glycolysis FBA, Elementary Modes, Thermodynamics.ipynb  Interactive FBAgd update.ipynb  Interactive FBAgd.ipynb  KB Editor.ipynb  Load BiGG.ipynb  Load ChEBI, RHEA.ipynb  Load ChEBI.ipynb  Load EC, GO.ipynb  NAD(P)(H) Couple (explore).ipynb  Nucleotides in the KB.ipynb  Redox Buffering.ipynb  Refine FBAgd.ipynb  Sugar Forms and Variations.ipynb  Test KB and Thermo API.ipynb  Variations Revisited.ipynb  WCM meeting Jun2022.ipynb  central_carbon.json  eQuilibrator central carbon.ipynb  glycolysis_ppp_ed.json  projectpath.py  setpypath.py
preso/escher/: escher_model.py
process/: fba_process.py  util.py
sim/: convenience_kinetics.py  elementary_modes.py  fba_gd.py  ph_dynamics.py
tests/knowledge/: codecs_test.py  session_test.py
tests/model/: base_test.py  pathway_test.py  reaction_network_test.py
viv/experiment/: glycolysis.py  glycolysis_tca.py
viv/process/: fba_process.py  util.py
