[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "mosmo"
version = "0.2.0"
authors = [
  { name="Frank D Russo", email="fdrusso.42@gmail.com" },
]
license = {file = "LICENSE.txt"}
description = "Molecular Systems Modeling toolkit"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Life',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
]
dependencies = [
    "equilibrator-api>=0.6",
    "jax>=0.4",
    "numpy>=2.1",
    "pymongo>=4.8",
    "scipy>=1.12",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3",
]

deploy = [
    "hatch>=1.12",
]

[project.urls]
"Homepage" = "https://github.com/fdrusso/mosmo"
"Bug Tracker" = "https://github.com/fdrusso/mosmo/issues"

[tool.hatch.build]
packages = ["mosmo"]
